# ummm-promptu

./: .env  .prettierrc.json  Media Library Web-Scraper - Closed Caption - and Streaming - Snye-V.sublime-workspace  Media Library Web-Scraper and Streamer - Snye-V.code-workspace  README.md  index.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  wrangler.toml
sklent_ftl/: Cargo.toml
sklent_ftl/src/: main.rs
src/: App.vue  main.ts
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
src/assets/: base.css
src/client/: supabaseClient.js
src/components/: ConcernError.vue  EventEmitter.vue
src/components/client/: supabaseClient.ts  urqlClient.ts
src/components/data/scripts/: graphQLDatabasePlugin.ts
src/components/models/: Account.vue  StreamScraper.vue
src/components/processors/: VideosCollectionProcessor.vue
src/components/services/: Caption.vue  CaptionItem.vue  Client.vue  Library.vue  Login.vue  Player.vue  PlayerItem.vue  VideoPlayer.vue
src/data/scripts/: graphQLDatabasePlugin.ts
src/router/: index.ts
src/stores/: video.ts
src/tests/ct/: imports.test.ts  mount.test.ts
src/views/: AboutView.vue  AccountView.vue  CaptionView.vue  LibraryView.vue  PlayerView.vue  VideoPlayerView.vue
